--- a/template.tmpl
+++ b/template.tmpl
@@ -72,7 +72,7 @@ func (o *{{.StructName}}) Save(ctx context.Context, db DB) error {
 			Table: {{.Name | printf "%q"}},
 			Wheres: []rel.Expr{
         rel.Assignment{
-          Field: "id",
+          Field: rel.Field{"id"},
           Value:  rel.BindParam{Value: o.old.ID},
         },
       },
@@ -81,7 +81,7 @@ func (o *{{.StructName}}) Save(ctx context.Context, db DB) error {
 {{range .Columns}}
     if o.{{.FieldName}} != o.old.{{.FieldName}} {
       stmt.Values = append(stmt.Values, rel.Assignment{
-        Field: {{.Name | printf "%q"}},
+        Field: rel.Field{ {{.Name | printf "%q"}} },
 				Value: &rel.BindParam{
           Value: o.{{.FieldName}},
 				},
@@ -381,16 +381,14 @@ func (q *{{.Singular}}Relation) DeleteAll(ctx context.Context, db DB) (int64, er
 }
 
 func (q *{{.Singular}}Relation) Where(query string, args ...interface{}) {{.StructName}}Relation {
-  clauses, err := rel.ParseAssignment(query, args...)
+  clauses, err := rel.ParseWhere(query, args...)
 
   // TODO(bouk): return error relation
   if err != nil {
     panic(err)
   }
 
-  for _, clause := range clauses {
-    q.whereClause = append(q.whereClause, clause)
-  }
+  q.whereClause = append(q.whereClause, clauses...)
 
 	return q
 }
@@ -405,7 +403,7 @@ func (q *{{.Singular}}Relation) New() *{{.StructName}} {
 	for _, w := range q.whereClause {
 		if eq, ok := w.(rel.Assignment); ok {
 			if bind, ok := eq.Value.(rel.BindParam); ok {
-				o.assignField(eq.Field, bind.Value)
+				o.assignField(eq.Field.Name, bind.Value)
       }
     }
   }
